# SwarmFormer-C

./: .gitignore  CMakeLists.txt  api_test.py  benchmarks.md  convert_tokenizer.py  convert_weights.py  readme.md  server_config.txt  setup.md  usage.md
.github/workflows/: cmake-multi-platform.yml
src/: main.c  swarmformer.c
src/core/: activation.c  activation.h  profiler.c  profiler.h  quantization.c  quantization.h  tensor.c  tensor.h
src/layers/: embedding.c  embedding.h  linear.c  linear.h  swarm_layers.c  swarm_layers.h
src/model/: swarmformer.c  swarmformer.h
src/server/: http_server.c  http_server.h
src/utils/: config.c  config.h  loader.c  loader.h  profiler.c  profiler.h  tokenizer.c  tokenizer.h
